[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[dependencies]
atoi = "2"
bytes = "1"
tokio = { version = "1", features =  ["full"] }
